--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BombenEntschaerfenApp</string>
+    <string name="beacon_UUID">B9407F30-F5F8-466E-AFF9-25556B57FE6D</string>
 </resources>
